# live-memory

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  FAQ.md  GUIDE_INTEGRATION_CLAUDE_CODE.fr.md  GUIDE_INTEGRATION_CLINE.md  INTEGRATION_GUIDE_CLAUDE_CODE.en.md  INTEGRATION_GUIDE_CLINE.en.md  README.en.md  README.md  docker-compose.local.yml  docker-compose.nowaf.yml  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml
DESIGN/live-mem/: ANALYSE_RISQUES_SECURITE.md  ARCHITECTURE.md  AUTH_AND_COLLABORATION.md  CLOUD_TEMPLE_SERVICES.md  CONCURRENCY.md  CONSOLIDATION_LLM.md  DEPLOIEMENT_PRODUCTION.md  MCP_TOOLS_SPEC.md  S3_DATA_MODEL.md
RULES/: README.md  product.management.memory.bank.md
scripts/: README.en.md  README.md  test_bank_compact.py  test_dedup_fix.py  test_recette.py
scripts/cli/: client.py  commands.py  display.py  shell.py
src/live_mem/: __init__.py  config.py  middleware.py  server.py
src/live_mem/auth/: context.py  middleware.py
src/live_mem/core/: backup.py  consolidator.py  gc.py  graph_bridge.py  live.py  models.py  space.py  storage.py  tokens.py
src/live_mem/static/css/: live.css
src/live_mem/static/js/: app.js
src/live_mem/tools/: admin.py  backup.py  bank.py  graph.py  live.py  space.py  system.py
tests/: test_config.py  test_json_repair.py  test_middleware.py  test_proxy.py  test_tokens.py
