[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "live-memory"
dynamic = ["version"]
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.8.0",
    "uvicorn>=0.32.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "click>=8.1",
    "rich>=13.0",
    "prompt-toolkit>=3.0",
    "httpx>=0.27",
    "httpx-sse>=0.4",
    "boto3>=1.34",
    "openai>=1.0",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = ["pytest>=9.0", "pytest-asyncio>=1.3"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.pytest.ini_options]
asyncio_mode = "auto"
